UV map for closed curves incorrectly generated #37225

Closed
opened 2013-10-27 11:35:21 +01:00 by Tobias Oelgarte · 6 comments

%%%--- Operating System, Graphics card ---
Ubuntu 12.04

- Blender version with error, and version that worked ---

2.68, 2.69 (r60951)

- Short description of error ---

UV-Map for closed curves is not correctly generated when using the option "use UV for mapping". There is one segment that is mapped from 0 to 1 and all other segments are mapped from 0 to 1. As the result the entire texture is shown twice. Once for the closing segment and once stretched along all other segments.

It should only be displayed once and stretched along all segments. The y-coordinate is correct, the x-cooridante is wrong.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

I appended an example file. I have setup the material for cycles as well as for blender internal. Both show the same behavior. I guess that the UV generator for curves has an simple error if used with closed curves.

%%%

%%%--- Operating System, Graphics card --- Ubuntu 12.04 - Blender version with error, and version that worked --- 2.68, 2.69 (r60951) - Short description of error --- UV-Map for _closed_ curves is not correctly generated when using the option "use UV for mapping". There is one segment that is mapped from 0 to 1 and all other segments are mapped from 0 to 1. As the result the entire texture is shown twice. Once for the closing segment and once stretched along all other segments. It should only be displayed once and stretched along all segments. The y-coordinate is correct, the x-cooridante is wrong. - Steps for others to reproduce the error (preferably based on attached .blend file) --- I appended an example file. I have setup the material for cycles as well as for blender internal. Both show the same behavior. I guess that the UV generator for curves has an simple error if used with closed curves. %%%

Changed status to: 'Open'

Changed status to: 'Open'

Do have patch for this D45, needs a bit more tests and review.

Do have patch for this [D45](https://archive.blender.org/developer/D45), needs a bit more tests and review.

This issue was referenced by blender/blender-addons-contrib@cc55913798

This issue was referenced by blender/blender-addons-contrib@cc55913798aecbdeb3fc6e49c16a26ccbddebd9b

This issue was referenced by cc55913798

This issue was referenced by cc55913798aecbdeb3fc6e49c16a26ccbddebd9b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit cc55913798.

Closed by commit cc55913798.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37225
No description provided.